--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
   </head>
   
   <body class="container">
-    <section style="padding-top: 40vh;" data-aos="fade-right" data-aos-duration="2000"><div class="jumbotron-fluid" style="padding: 10% 10% 3% 5%;">
+
+    <div><section style="padding-top: 40vh;" data-aos="fade-right" data-aos-duration="2500"><div class="jumbotron-fluid" style="padding: 10% 10% 3% 5%;">
       <div class="container">
         <h1 class="display-4">Matt Zhang</h1>
         <br class="my-4">
-        <p id="banner-bottom" class="lead">Hey! I'm Matt - an uWaterloo SoftEng student trying to learn how to talk to computers. </p>
+        <p id="banner-bottom" class="lead">Hey! I'm Matt - a uWaterloo SoftEng student trying to learn how to talk to computers. </p>
         <!-- <p>For now, wanna play some <a class="btn btn-primary btn-sm" href="https://zhang.software/hangman/">hangman</a> ?</p> -->
       </div>
     </div></section>
@@ -39,7 +40,7 @@
           <button class="btn bmd-btn-fab navbar-btn btn-primary" onclick="toggleNight()" id="toggleButtonText">🌙</div></button>
         </li>
       </ul>
-    </nav>
+    </nav></div>
 
     
     
