added zen machine card

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="container">
         <h1 class="display-4">Matt Zhang</h1>
         <br class="my-4">
-        <p id="banner-bottom" class="lead">Hey! I'm Matt - a uWaterloo SoftEng student trying to learn how to talk to computers. </p>
+        <p id="banner-bottom" class="lead">Hey! I'm Matt - a uWaterloo SoftEng student trying to learn to talk to computers. </p>
         <!-- <p>For now, wanna play some <a class="btn btn-primary btn-sm" href="https://zhang.software/hangman/">hangman</a> ?</p> -->
       </div>
     </div></section>
@@ -50,6 +50,7 @@
           <div class="col-md-4">
             <img class="card-img-top" style="height: 100%px; width: 100%; display: block;" src="./assets/970.jpg">
           </div>
+
           <div class="col-md-8">
             <div class="card-body">
               <h5 class="card-title">97.0FM</h5>
@@ -84,7 +85,31 @@
         </div>
         
         <div class="col-md-4">
-          <img class="card-img-top" style="height: 100%px; width: 100%; display: block;" src="./assets/cleantimer.png">
+          <img class="card-img-top" style="height: 100%px; width: 100%; display: block;" src="./assets/cleanTimer.png">
+        </div>
+      </div>
+    </section>
+
+    <section id="projects" data-aos="fade-right" >
+      <div class="card mb-3 bg-transparent" style="max-width: 100%;">
+        <div class="row no-gutters">
+          <div class="col-md-4">
+            <img class="card-img-top" style="height: 100%px; width: 100%; display: block;" src="./assets/zenMachine.jpg">
+          </div>
+
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">The Zen Machine</h5>
+              <p class="card-text">A discord bot that helps you live, laugh and love.<br>It's here for you when you need a push in the right direction. With AI-generated motivational posters and guided meditation sessions.
+              <br>.motivate for a quote or .medidate for an infinite guided meditation session.</p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                  <button type="button" class="btn btn-sm btn-outline-secondary"><a href="https://github.com/mzhang/zenMachine">GitHub</a></button>
+                  <button type="button" class="btn btn-sm btn-outline-secondary"><a href="https://discord.com/api/oauth2/authorize?client_id=796473859276406804&permissions=8&scope=bot">Invite to Discord!</a></button>
+                </div>
+                <small class="text-muted">Python, Discord.py, Beautiful Soup</small>
+              </div>
+            </div>
         </div>
       </div>
     </section>
