--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
               <p class="card-text">WSMAC is a revolutionary language teaching tool utilising the principles of classical conditioning to facilitate language acquisition and form useful habits. For humans: we'll NLP your speech and give you physical feedback if you do speak poorly!</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary"><a href="https://github.com/mzhang/DoxMyTech/">GitHub</a></button>
+                  <button type="button" class="btn btn-sm btn-outline-secondary"><a href="https://github.com/mzhang/WSMAC/">GitHub</a></button>
                 </div>
                 <small class="text-muted">Python, Azure, Javascript</small>
               </div>
