fixed links to doxmytech and mzhang/doxmytech

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
               <p class="card-text">DoxMyTech is a webapp that helps you analyze your public social media profiles. You'll get cool analytics and potentially sensitive data that you may have posted and forgot about. Input your social media handles, prove who you're who you say you are and sit back!</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary"><a href="https://github.com/mzhang/WSMAC/">GitHub</a></button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary"><a href="https://https://doxmy.tech/">DoxMy.Tech</a></button>
+                  <button type="button" class="btn btn-sm btn-outline-secondary"><a href="https://github.com/mzhang/doxmytech/">GitHub</a></button>
+                  <button type="button" class="btn btn-sm btn-outline-secondary"><a href="https://doxmy.tech/">DoxMy.Tech</a></button>
                 </div>
                 <small class="text-muted">React, Flask, PostgreSQL</small>
               </div>
