added watNext to portfolio section

--- a/index.html
+++ b/index.html
@@ -42,6 +42,28 @@
       </ul>
     </nav></div>
 
+    <section id="projects" data-aos="fade-right" >
+      <div class="card mb-3 bg-transparent" style="max-width: 100%;">
+        <div class="row no-gutters">
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">watNext</h5>
+              <p class="card-text">Stay on schedule with the power of peer pressure! watNext is a MERN-based todo list / posting board hybrid where you can check future deadlines and find fellow students to collaborate with. Make an account and leave a comment!</p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                  <button type="button" class="btn btn-sm btn-outline-secondary"><a href="https://github.com/mzhang/watNext/">GitHub</a></button>
+                </div>
+                <small class="text-muted">MongoDB, Express, React, Node.js</small>
+              </div>
+            </div>
+        </div>
+        
+        <div class="col-md-4">
+          <img class="card-img-top" style="height: 100%px; width: 100%; display: block;" src="./assets/watNext.png">
+        </div>
+      </div>
+    </section>
+
     <section id="projects" data-aos="fade-left" >
       <div class="card mb-3 bg-transparent" style="max-width: 100%;">
         <div class="row no-gutters">
