--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
       <title>Matt Zhang</title>
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-      <meta name="description" content="Matt Zhang's Website & Blog">
+      <meta name="description" content="A copy of my business card.">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="stylesheet" href="./index.css">
   </head>
   <body>
-      <div class="hitbox"> 
+    <div class="hitbox"> 
         <div class="card">
             <div class="front">
                 <p>
@@ -36,7 +36,7 @@
                         <tr>
                             <td>LINKEDIN</td>
                             <td class="table-link">
-                                <a href="https://www.linkedin.com/in/mattzhang-/">matt-zhang-</a>
+                                <a href="https://www.linkedin.com/in/mattzhang-/">mattzhang-</a>
                             </td>
                         </tr>
                         <tr>
@@ -48,7 +48,7 @@
                         <tr>
                             <td>RESUME</td>
                             <td class="table-link">
-                                <a href="https://zhang.software/resume.pdf">Link</a>
+                                <a href="https://zhang.software/resume.pdf">link</a>
                             </td>
                         </tr>
                     </table>
