--- a/index.html
+++ b/index.html
@@ -2,12 +2,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <title>Matt Zhang</title>
+      <title>Matt Z | Card</title>
+      <meta name="author" content="Matt Zhang">
+      <meta name="description" content="Take a card.">
+      <meta name="keywords" content="Matt, Zhang, Software, Resume, LinkedIn, Github">
+
+      <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-      <meta name="description" content="A copy of my business card.">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
+
       <link rel="stylesheet" href="./index.css">
+      <link rel="icon" type="image/x-icon" href="./favicon.png">
   </head>
   <body>
     <div class="hitbox"> 
