--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="back">
                 <div class="back-body">
                     <div>
-                        <p>SWE, Appreciator</p>
+                        <p>SWE</p>
                         <p>Python, React, C++</p>
                         <p>Eager to broaden his horizons.</p>
                     </div>
