--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="back-body">
                     <div>
                         <p>SWE</p>
-                        <p>Python, React, C++</p>
+                        <p>React, Go, Python, C++</p>
                         <p>Eager to broaden his horizons.</p>
                     </div>
                     <table>
