--- a/index.html
+++ b/index.html
@@ -4,13 +4,11 @@
   <head>
       <title>Matt Z | Card</title>
       <meta name="author" content="Matt Zhang">
-      <meta name="description" content="Take a card.">
-      <meta name="keywords" content="Matt, Zhang, Software, Resume, LinkedIn, Github">
-
+      <meta name="description" content="Matt Zhang's portfolio, personal website and business card">
+      <meta name="keywords" content="Matt, Zhang, Software, Waterloo, Resume, LinkedIn, Github, Engineer">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-
       <link rel="stylesheet" href="./index.css">
       <link rel="icon" type="image/x-icon" href="./favicon.png">
   </head>
