--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <title>Matt Z | Card</title>
+      <title>Matt Zhang | Card</title>
       <meta name="author" content="Matt Zhang">
       <meta name="description" content="Matt Zhang's portfolio, personal website and business card">
       <meta name="keywords" content="Matt, Zhang, Software, Waterloo, Resume, LinkedIn, Github, Engineer">
@@ -10,7 +10,7 @@
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
       <link rel="stylesheet" href="./index.css">
-      <link rel="icon" type="image/x-icon" href="./favicon.png">
+      <link rel="icon" type="image/x-icon" href="./favicon.ico">
   </head>
   <body>
     <div class="hitbox"> 
