--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
       <link rel="stylesheet" href="./index.css">
-      <link rel="icon" type="image/x-icon" href="./favicon.ico">
+      <link rel="icon" type="image/x-icon" href="./favicon.png">
   </head>
   <body>
     <div class="hitbox"> 
