--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div class="back-body">
                     <div>
                         <p>SWE</p>
-                        <p>React, Go, Python, C++</p>
+                        <p>Scala, Go, React, C++, whatever </p>
                         <p>Eager to broaden his horizons.</p>
                     </div>
                     <table>
